# goat-scraper

./: .gitignore  Makefile  README.md  courses.json  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/course/[id]/: page.tsx
frontend/app/courses/: page.tsx
frontend/app/study/: page.tsx
frontend/components/: compact-leaderboard.tsx  course-content.tsx  course-overview.tsx  course-progress-badge.tsx  footer.tsx  header.tsx  leaderboard.tsx  progress-provider.tsx  use-progress-sync.tsx
frontend/crdt/: progress_server.py
